sandbox/output
MedicineClashTest.java:27: error: cannot find symbol
        assertEquals(0, medicineClash.daysOf(customerMedicineTaking));
                                             ^
  symbol:   variable customerMedicineTaking
  location: class MedicineClashTest
MedicineClashTest.java:27: error: cannot find symbol
        assertEquals(0, medicineClash.daysOf(customerMedicineTaking));
                        ^
  symbol:   variable medicineClash
  location: class MedicineClashTest
2 errors
